fix menu height too big issue

--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -64,7 +64,7 @@
   font-weight: 600;
   font-size: 14px;
   letter-spacing: 1px;
-  line-height: 35px;
+  line-height: 1.2;
   &:visited {
     color: $text-black;
   }
